...
            .fillMaxWidth()
            .padding(0.dp, 16.dp, 0.dp, 16.dp),
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {

        IconButton(onClick = { navigationController.popBackStack()},modifier= Modifier.testTag("backButton")) {
            Icon(imageVector = Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Atrás")
        }
        Title(text)
    }
}

@Preview
@Composable
fun Title(text: String="Artista") {
    Text(
        text = text,
        style = TextStyle(
            color = Color(0xFF1B1C17),
            textAlign = TextAlign.Start,
            fontSize = 22.sp,
...
