...
        LaunchedEffect(key1 = true) {
            viewModel.fetchArtists()
        }
    }

    //CenterText(text = "Artist")
    ArtistList(viewModel,navigationController)
}

@Composable
fun ArtistList(viewModel: ArtistViewModel, navigationController: NavHostController) {
    val artists by viewModel.artists.observeAsState(initial = listOf())

...
