...
}


@Composable
fun Title() {
    Text(
        text = "Álbum",
        style = TextStyle(
            color = Color(0xFF1B1C17),
            textAlign = TextAlign.Start,
            fontSize = 22.sp,
            lineHeight = 28.sp,
            fontWeight = FontWeight(400),
...
